--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+  
   <link rel="stylesheet" href="main.css">
+
+
 </head>
 <body>
 
@@ -67,5 +69,12 @@
     </ul>
   </div>
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- CDN-hosted version of jQuery -->
+
+  <script src="index.js"></script>
+  <!--Link to HTML file-->
+  
 </body>
 </html>
